Change id from Int to String

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 use_frameworks!
 
 target 'iOSDropDown_Example' do
-  pod 'iOSDropDown', :path => '../'
+  pod 'UIDropdownMenu', :path => '../'
 
   target 'iOSDropDown_Tests' do
     inherit! :search_paths
